# quartobot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  design.md  feature.md
.github/workflows/: docs-link-check.yml  publish-pypi.yml  publish-site.yml  render-reusable.yml  test-composite-actions.yml  test-prerender-e2e.yml  test-python.yml
_extensions/seandavi/quarto-manubot-cite/: README.md  _extension.yml  pandoc-manubot-cite.lua
actions/prune-snapshots/: README.md  action.yml
actions/render-manuscript/: README.md  action.yml
actions/setup-quartobot/: README.md  action.yml
docs/: citation-pipeline.md  conversation-notes.md  prior-art.md  publication-plan.md
docs-src/: _quarto.yml  first-manuscript.qmd
docs-src/fixtures/sample-paper/: _quarto.yml  index.qmd
docs-src/scripts/: post-render.py
examples/book-minimal/: .gitignore  README.md  _quarto.yml  index.qmd  references.bib
examples/book-minimal/chapters/: discussion.qmd  intro.qmd  methods.qmd
examples/extension-minimal/: .gitignore  README.md  _quarto.yml  index.qmd
examples/minimal/: .gitignore  README.md  _quarto.yml  index.qmd  references.bib
site/: .gitignore  _quarto.yml  astro.config.mjs  book.qmd  cli.qmd  design.qmd  differences-from-manubot.qmd  extension.qmd  getting-started.qmd  index.qmd  install.qmd  migrating-from-manubot.qmd  package-lock.json  package.json  template.qmd
site-starlight/: astro.config.mjs
site-starlight/src/content/docs/: cli.md  getting-started.md  install.md  template.md
site/src/content/docs/: book.md  cli.md  design.md  differences-from-manubot.md  first-manuscript.md  getting-started.md  index.mdx  install.md  jupyter-notebooks.md  mcp-claude-desktop.md  mcp.md  migrating-from-manubot.md  quarto-books.md  quarto-websites.md  resolve-single-citation.md  shell-tool-agent.md  template.md  troubleshooting.md  validate-manuscript.md
site/src/styles/: feature-bands.css
src/quartobot/: __init__.py  cli.py  init_project.py  mcp.py  resolve.py  scan.py  snapshots.py  use_github_ci.py  validate.py
template/: .gitignore  README.md  _quarto.yml  _version-banner.html  _version-banner.html.template  index.qmd  references.bib
template-book/: .gitignore  README.md  _quarto.yml  _version-banner.html.template  index.qmd  references.bib
template-book/.github/workflows/: pr-closed.yml  render.yml
template-book/chapters/: discussion.qmd  intro.qmd  methods.qmd
template/.github/workflows/: pr-closed.yml  render.yml
tests/: test_cli.py  test_init.py  test_mcp.py  test_resolve.py  test_scan.py  test_snapshots.py  test_use_github_ci.py  test_validate.py
tests/fixtures/: sample.qmd
