[project]
name = "quartobot"
version = "0.2.0"
description = "Citation resolution and manuscript-as-software CI for Quarto."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sean Davis", email = "seandavi@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "quarto",
    "manubot",
    "citations",
    "scholarly-publishing",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.1",
    "manubot>=0.6,<0.7",
    # PyYAML reads `_quarto.yml` for validate. Manubot already pulls it
    # transitively, but we depend on it directly so we don't rely on
    # manubot's pin staying compatible.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Opt-in MCP server: `uv tool install 'quartobot[mcp]'` adds the
# Model Context Protocol SDK so `quartobot mcp` can expose
# citation-resolution tools to Claude Desktop, Codex, Gemini Code
# Assist, etc. Base install is unchanged.
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    # CI exercises the MCP wrappers under `tests/test_mcp.py`. Pulling
    # the SDK in via the dev extra keeps the mcp test surface from
    # silently skipping every run.
    "mcp>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/quartobot/quartobot"
Documentation = "https://quartobot.github.io/quartobot"
Issues = "https://github.com/quartobot/quartobot/issues"
Source = "https://github.com/quartobot/quartobot"

[project.scripts]
quartobot = "quartobot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quartobot"]

# uv ignores Quarto/CI artifacts and example projects when resolving the
# package source. The Quarto extension at _extensions/ and the manuscript
# template at template/ ship through `quarto add` and `gh repo create`,
# not through `pip install`.
[tool.hatch.build.targets.sdist]
include = [
    "src/quartobot/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["_extensions", "template", "examples", "site", "paper", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # tests don't need docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
files = ["src/quartobot"]
python_version = "3.10"
strict = true
warn_unreachable = true

# manubot ships without type stubs. We import a handful of its public
# entry points (CiteKey, citekey_to_csl_item); silence the
# missing-stubs warning rather than vendor a partial stub package.
[[tool.mypy.overrides]]
module = ["manubot.*"]
ignore_missing_imports = true
